# Research

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
configs/: train.yaml
experiments/: PROTOCOL.md  performance-benchmarks.json  queue.json
scripts/: connectivity-watchdog.ps1  ensure-server-services.ps1  gpu-monitor.ps1  install-connectivity-watchdog.ps1  install-result-sync.ps1  install-server-autostart.ps1  prepare-and-train-server.ps1  result-manifest.ps1  run-experiment-queue.ps1  run-performance-benchmark.ps1  start-experiment-queue.ps1  start-gpu-monitor.ps1  start-server-pipeline.ps1  summarize-gpu-monitor.ps1  sync-results.ps1  tensorboard-server.ps1  tensorboard.sh  train-server.ps1  train.sh
src/isic_train/: __init__.py  config.py  data.py  losses.py  metrics.py  model.py  train.py  utils.py
tests/: test_core.py
