[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "isic2019-multimodal"
version = "0.1.0"
description = "Reproducible multimodal ConvNeXtV2 training for ISIC 2019"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
